tests/test74.rael.exp
Error [2:15]: Float index is not allowed
| log :array at 1.2
|               ^
