tests/test74.rael
:array ?= { 1, 2, 3, 4 }
log :array at 1.2
